# lovemesexy

./: .env  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: main1.py  server.py
app/core/: config.py  cors.py  db.py  dependencies.py
app/core/models/: base.py  item.py  order.py  product.py
app/core/services/: product.py
app/routers/api/: health.py  index.py
app/routers/web/: cart.py  home.py
app/utils/: commands.py  date_time.py  initialize_routes.py
app/utils/linked_list/: linkedList.py  node.py
data/: catalogs.json  categories.json  products.json
static/: base.css  drop_down.css  drop_down.js  import_fonts.css  main.css  splash.css  styles.css
static/css/: app.css  banner_fade_in_out.css  base.css  import_fonts.css
static/css1/: base.css  breadcrumb.css  checkout_button.css  footer.css  free_shipping.css  image-thumbnails.css  import_fonts.css  increase_decrease_button.css  ink_image.css  lang_drop_down.css  main.css  mega_menu.css  product_info.css  search_box.css  slide_cart_grid.css  travel.css
static/js/: drop_down.js  mega_menu.js  travel.js
templates/: base copy.html  base.html  base_1.html  cart.html  content.html  content_base.html  footer.html  home.html  imgtb.html  intro.html  macros.html  main copy.html  main.html  menu.html  product-info.html  save_items.html  travel.html
